--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.17",
+    "axios": "^1.13.2",
     "lucide-react": "^0.525.0",
     "next": "^16.1.1",
     "react": "19.1.0",
